log
ju., 21 de abr. de 2022 11:28:34: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:76:12: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if(lower_than (key,aux->pair->key)==1){
            ^~~~~~~~~~
treemap.c:78:18: error: implicit declaration of function 'lowe_than' [-Werror=implicit-function-declaration]
         }else if(lowe_than(aux->pair->key,key)==1){
                  ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
27a38ef
ju., 21 de abr. de 2022 11:28:51: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:76:12: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if(lower_than (key,aux->pair->key)==1){
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7dd821d
ju., 21 de abr. de 2022 11:30:08: 
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:76:12: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if(lower_than(key,aux->pair->key)==1){
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c2a528f
ju., 21 de abr. de 2022 11:32:03: 
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:76:12: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if(lower_than(key,aux->pair->key)==1){
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
dd68126
ju., 21 de abr. de 2022 11:35:12: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  8|7
total_score: 10/70
7d6f757
